fix mobile whitespace and project size

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,10 @@
 
 @layer base{
     html{
-        @apply 	scroll-smooth
+        @apply 	scroll-smooth w-screen overflow-x-clip;
+    }
+    body{
+        @apply w-screen overflow-x-clip
     }
     
 }
@@ -15,5 +18,8 @@
     }
     .shadow-inner-xl{
         box-shadow: inset 0px 5px 20px 10px rgb(0 0 0 / 0.25);
+    }
+    .shadow-up{
+        box-shadow:  0px -15px 20px -12px rgb(0 0 0 / 0.05);
     }
 }
